<resources>
    <string name="app_name">World National Flag</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_remove">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_rotate_right">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_dedent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_image">&#xf03e;</string>
    <string name="fa_photo">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_step_forward">&#xf051;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_plus_circle">&#xf055;</string>
    <string name="fa_minus_circle">&#xf056;</string>
    <string name="fa_times_circle">&#xf057;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_question_circle">&#xf059;</string>
    <string name="fa_info_circle">&#xf05a;</string>
    <string name="fa_crosshairs">&#xf05b;</string>
    <string name="fa_times_circle_o">&#xf05c;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_share">&#xf064;</string>
    <string name="fa_mail_forward">&#xf064;</string>
    <string name="fa_expand">&#xf065;</string>
    <string name="fa_compress">&#xf066;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_minus">&#xf068;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_exclamation_circle">&#xf06a;</string>
    <string name="fa_gift">&#xf06b;</string>
    <string name="fa_leaf">&#xf06c;</string>
    <string name="fa_fire">&#xf06d;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="fa_eye_slash">&#xf070;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_warning">&#xf071;</string>
    <string name="fa_plane">&#xf072;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_random">&#xf074;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_magnet">&#xf076;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_retweet">&#xf079;</string>
    <string name="fa_shopping_cart">&#xf07a;</string>
    <string name="fa_folder">&#xf07b;</string>
    <string name="fa_folder_open">&#xf07c;</string>
    <string name="fa_arrows_v">&#xf07d;</string>
    <string name="fa_arrows_h">&#xf07e;</string>
    <string name="fa_bar_chart">&#xf080;</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_twitter_square">&#xf081;</string>
    <string name="fa_facebook_square">&#xf082;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_key">&#xf084;</string>
    <string name="fa_cogs">&#xf085;</string>
    <string name="fa_gears">&#xf085;</string>
    <string name="fa_comments">&#xf086;</string>
    <string name="fa_thumbs_o_up">&#xf087;</string>
    <string name="fa_thumbs_o_down">&#xf088;</string>
    <string name="fa_star_half">&#xf089;</string>
    <string name="fa_heart_o">&#xf08a;</string>
    <string name="fa_sign_out">&#xf08b;</string>
    <string name="fa_linkedin_square">&#xf08c;</string>
    <string name="fa_thumb_tack">&#xf08d;</string>
    <string name="fa_external_link">&#xf08e;</string>
    <string name="fa_sign_in">&#xf090;</string>
    <string name="fa_trophy">&#xf091;</string>
    <string name="fa_github_square">&#xf092;</string>
    <string name="fa_upload">&#xf093;</string>
    <string name="fa_lemon_o">&#xf094;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_square_o">&#xf096;</string>
    <string name="fa_bookmark_o">&#xf097;</string>
    <string name="fa_phone_square">&#xf098;</string>
    <string name="fa_twitter">&#xf099;</string>
    <string name="fa_facebook">&#xf09a;</string>
    <string name="fa_facebook_f">&#xf09a;</string>
    <string name="fa_github">&#xf09b;</string>
    <string name="fa_unlock">&#xf09c;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="fa_rss">&#xf09e;</string>
    <string name="fa_hdd_o">&#xf0a0;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_hand_o_right">&#xf0a4;</string>
    <string name="fa_hand_o_left">&#xf0a5;</string>
    <string name="fa_hand_o_up">&#xf0a6;</string>
    <string name="fa_hand_o_down">&#xf0a7;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_globe">&#xf0ac;</string>
    <string name="fa_wrench">&#xf0ad;</string>
    <string name="fa_tasks">&#xf0ae;</string>
    <string name="fa_filter">&#xf0b0;</string>
    <string name="fa_briefcase">&#xf0b1;</string>
    <string name="fa_arrows_alt">&#xf0b2;</string>
    <string name="fa_users">&#xf0c0;</string>
    <string name="fa_group">&#xf0c0;</string>
    <string name="fa_link">&#xf0c1;</string>
    <string name="fa_chain">&#xf0c1;</string>
    <string name="fa_cloud">&#xf0c2;</string>
    <string name="fa_flask">&#xf0c3;</string>
    <string name="fa_scissors">&#xf0c4;</string>
    <string name="fa_cut">&#xf0c4;</string>
    <string name="fa_files_o">&#xf0c5;</string>
    <string name="fa_copy">&#xf0c5;</string>
    <string name="fa_paperclip">&#xf0c6;</string>
    <string name="fa_floppy_o">&#xf0c7;</string>
    <string name="fa_save">&#xf0c7;</string>
    <string name="fa_square">&#xf0c8;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_reorder">&#xf0c9;</string>
    <string name="fa_navicon">&#xf0c9;</string>
    <string name="fa_list_ul">&#xf0ca;</string>
    <string name="fa_list_ol">&#xf0cb;</string>
    <string name="fa_strikethrough">&#xf0cc;</string>
    <string name="fa_underline">&#xf0cd;</string>
    <string name="fa_table">&#xf0ce;</string>
    <string name="fa_magic">&#xf0d0;</string>
    <string name="fa_truck">&#xf0d1;</string>
    <string name="fa_pinterest">&#xf0d2;</string>
    <string name="fa_pinterest_square">&#xf0d3;</string>
    <string name="fa_google_plus_square">&#xf0d4;</string>
    <string name="fa_google_plus">&#xf0d5;</string>
    <string name="fa_money">&#xf0d6;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_caret_up">&#xf0d8;</string>
    <string name="world_national_flag_challenge">World National Flag Challenge</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="oceania">Oceania</string>
    <string name="south_america">South America</string>
    <string name="help">Help</string>
    <string name="this_challenge_requires_you_to_select_the_correct_country_name_of_the_national_flag_on_current_display_from_the_options_provided_beginning_with_africa_play_across_all_continents_to_stand_a_chance_of_getting_higher_points_long_press_the_audio_icon_to_select_music">This challenge requires you to select the correct country name of the national flag on current display from the options provided. Beginning with africa, play across all continents to stand a chance of getting higher points. Long press the audio icon to select music</string>
    <string name="enjoy">...enjoy</string>
    <string name="about">About</string>
    <string name="this_application_is_designed_to_ease_familiarity_with_world_national_flags_world_national_flag_challenge_provides_the_educative_and_entertaining_opportunity">This application is designed to ease familiarity with world national flags. World national flag challenge provides the educative and entertaining opportunity</string>
    <string name="by_ismaila_lukman_enegi">by Ismaila Lukman Enegi</string>
</resources>